--- a/layouts/index.html
+++ b/layouts/index.html
@@ -173,9 +173,9 @@
       <div class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg">
         <section id="tweets" class="pf-c-section--articles">
           {{ if .Site.Data.integrations.twitter.enabled }}
-            {{ partial "twitterfeed" (dict "ID" "twitterfeed" "Username" .Site.Data.integrations.twitter.username "Warning" .Site.Data.integrations.twitter.warning "BaseURL" .Site.BaseURL ) }}
+            {{ partial "twitterfeed" (dict "ID" "twitterfeed" "Username" .Site.Data.integrations.twitter.username "Warning" .Site.Data.integrations.twitter.warning "Construction" .Site.Data.integrations.twitter.construction "BaseURL" .Site.BaseURL ) }}
           {{ else }}
-            {{ partial "mastodonfeed" (dict "ID" "mastodonfeed" "Username" .Site.Data.integrations.mastodon.username "BaseURL" .Site.BaseURL ) }}
+            {{ partial "mastodonfeed" (dict "ID" "mastodonfeed" "Username" .Site.Data.integrations.mastodon.username "Construction" .Site.Data.integrations.mastodon.construction "BaseURL" .Site.BaseURL ) }}
           {{ end }}
         </section>
       </div>
