--- a/layouts/partials/mastodonfeed.html
+++ b/layouts/partials/mastodonfeed.html
@@ -7,29 +7,49 @@
   >
     <span>Latest toots</span>
 
-    <a
-      target="_blank"
-      class="twitterfeed__user__url pf-l-flex pf-m-align-items-center"
-    >
-      <img
-        src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-        alt="Mastodon follower count"
-      />
-    </a>
+    {{ if not .Construction }}
+      <a
+        target="_blank"
+        class="twitterfeed__user__url pf-l-flex pf-m-align-items-center"
+      >
+        <img
+          src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
+          alt="Mastodon follower count"
+        />
+      </a>
+    {{ end }}
   </div>
   <div class="pf-c-card__body twitterfeed">
-    <ul
-      class="twitterfeed__tweets pf-l-flex pf-m-column pf-m-space-items-sm"
-    ></ul>
+    {{ if .Construction }}
+      <div
+        class="pf-c-alert pf-m-warning pf-m-inline pf-u-mb-md"
+        aria-label="Warning alert"
+      >
+        <div class="pf-c-alert__icon">
+          <i class="fas fa-fw fa-wrench" aria-hidden="true"></i>
+        </div>
+        <p class="pf-c-alert__title">
+          <span class="pf-screen-reader">Warning alert:</span>
+          Under construction
+        </p>
+        <div class="pf-c-alert__description">
+          <p>
+            This feed is still in development, but should be available in the
+            near future.
+          </p>
+        </div>
+      </div>
+    {{ else }}
+      <ul
+        class="twitterfeed__tweets pf-l-flex pf-m-column pf-m-space-items-sm"
+      ></ul>
 
-    <a
-      target="_blank"
-      class="twitterfeed__user__url pf-c-button pf-m-link"
-    >
-      <span class="pf-c-button__icon pf-m-start">
-        <i class="fas fa-arrow-right" aria-hidden="true"></i> </span
-      >All toots</a
-    >
+      <a target="_blank" class="twitterfeed__user__url pf-c-button pf-m-link">
+        <span class="pf-c-button__icon pf-m-start">
+          <i class="fas fa-arrow-right" aria-hidden="true"></i> </span
+        >All toots</a
+      >
+    {{ end }}
   </div>
 </div>
 
