--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -7,59 +7,82 @@
   >
     <span>Latest tweets</span>
 
-    <a
-      target="_blank"
-      class="twitterfeed__user__url pf-l-flex pf-m-align-items-center"
-    >
-      <img
-        src="https://img.shields.io/twitter/follow/{{ .Username }}?label={{ printf `%s%s` `@` .Username }}&style=social"
-        alt="Twitter follower count"
-      />
-    </a>
+    {{ if not .Construction }}
+      <a
+        target="_blank"
+        class="twitterfeed__user__url pf-l-flex pf-m-align-items-center"
+      >
+        <img
+          src="https://img.shields.io/twitter/follow/{{ .Username }}?label={{ printf `%s%s` `@` .Username }}&style=social"
+          alt="Twitter follower count"
+        />
+      </a>
+    {{ end }}
   </div>
   <div class="pf-c-card__body twitterfeed">
-    {{ if .Warning }}
+    {{ if .Construction }}
       <div
         class="pf-c-alert pf-m-warning pf-m-inline pf-u-mb-md"
         aria-label="Warning alert"
       >
         <div class="pf-c-alert__icon">
-          <i class="fas fa-fw fa-exclamation-triangle" aria-hidden="true"></i>
+          <i class="fas fa-fw fa-wrench" aria-hidden="true"></i>
         </div>
         <p class="pf-c-alert__title">
           <span class="pf-screen-reader">Warning alert:</span>
-          This feed originates from non-free social media.
+          Under construction
         </p>
         <div class="pf-c-alert__description">
           <p>
-            Digital civil rights and sovereignty are important to a free
-            society. Twitter and Musk's conservatism are a threat to the very
-            core of the institutions that keep humanity functioning, and that
-            threat should be taken seriously.
-            <a
-              href="https://en.wikipedia.org/wiki/Network_sovereignty"
-              target="_blank"
-              rel="noopener"
-              >Learn more.</a
-            >
+            This feed is still in development, but should be available in the
+            near future.
           </p>
         </div>
       </div>
+    {{ else }}
+      {{ if .Warning }}
+        <div
+          class="pf-c-alert pf-m-warning pf-m-inline pf-u-mb-md"
+          aria-label="Warning alert"
+        >
+          <div class="pf-c-alert__icon">
+            <i class="fas fa-fw fa-exclamation-triangle" aria-hidden="true"></i>
+          </div>
+          <p class="pf-c-alert__title">
+            <span class="pf-screen-reader">Warning alert:</span>
+            This feed originates from non-free social media.
+          </p>
+          <div class="pf-c-alert__description">
+            <p>
+              Digital civil rights and sovereignty are important to a free
+              society. Twitter and Musk's conservatism are a threat to the very
+              core of the institutions that keep humanity functioning, and that
+              threat should be taken seriously.
+              <a
+                href="https://en.wikipedia.org/wiki/Network_sovereignty"
+                target="_blank"
+                rel="noopener"
+                >Learn more.</a
+              >
+            </p>
+          </div>
+        </div>
+      {{ end }}
+
+
+      <ul
+        class="twitterfeed__tweets pf-l-flex pf-m-column pf-m-space-items-sm"
+      ></ul>
+
+      <a
+        target="_blank"
+        class="twitterfeed__user__url pf-c-button pf-m-link pf-u-mt-lg"
+      >
+        <span class="pf-c-button__icon pf-m-start">
+          <i class="fas fa-arrow-right" aria-hidden="true"></i> </span
+        >All tweets</a
+      >
     {{ end }}
-
-
-    <ul
-      class="twitterfeed__tweets pf-l-flex pf-m-column pf-m-space-items-sm"
-    ></ul>
-
-    <a
-      target="_blank"
-      class="twitterfeed__user__url pf-c-button pf-m-link pf-u-mt-lg"
-    >
-      <span class="pf-c-button__icon pf-m-start">
-        <i class="fas fa-arrow-right" aria-hidden="true"></i> </span
-      >All tweets</a
-    >
   </div>
 </div>
 
