--- a/layouts/index.html
+++ b/layouts/index.html
@@ -56,7 +56,7 @@
         class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center"
       >
         <h1
-          class="pf-u-font-size-xl pf-u-font-weight-bold pf-u-mb-xs pf-x-u-text-shadow-sm pf-x-u-text--freestanding"
+          class="pf-u-font-size-xl pf-u-font-weight-bold pf-u-mb-xs pf-x-u-text-shadow-sm pf-x-u-text--freestanding pf-x-c-name"
         >
           {{ .Site.Data.person.name }}
         </h1>
