refactor: Modernize last commit integration

--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -11,10 +11,7 @@
             class="pf-c-code-block__actions pf-c-code-block__actions--info pf-u-flex-direction-column pf-u-flex-direction-row-on-lg"
           >
             <div class="pf-c-code-block__actions-item pf-u-py-sm pf-u-px-md">
-              <span>
-                <i class="fas fa-info-circle" aria-hidden="true"></i>
-                Last GitHub commit by</span
-              >
+              <span>Last GitHub commit by</span>
               <a class="lastcommit__user__url" target="_blank">
                 <img id="lastcommit__user__url__img" />
               </a>
