--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -137,7 +137,9 @@ $bg: "/img/bg.webp";
 }
 
 .pf-x-octocat {
-  width: 100px;
+  width: 90px;
+  margin-left: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .pf-x-u-blur {
