--- a/layouts/index.html
+++ b/layouts/index.html
@@ -120,7 +120,7 @@
             <div
               class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-py-xl"
             >
-              <span>Articles</span>
+              <span>Recent Articles</span>
             </div>
             <div class="pf-c-card__body twitterfeed">
               <ul class="pf-l-flex pf-m-column pf-m-space-items-sm">
@@ -174,7 +174,9 @@
       </div>
       <div class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg">
         <section id="tweets" class="pf-c-section--articles">
-          {{ if .Site.Data.integrations.twitter.enabled }}
+          {{ if .Site.Data.integrations.bluesky.enabled }}
+            {{ partial "blueskyfeed" (dict "ID" "blueskyfeed" "Username" .Site.Data.integrations.bluesky.username "Construction" .Site.Data.integrations.bluesky.construction "BaseURL" .Site.BaseURL ) }}
+          {{ else if .Site.Data.integrations.twitter.enabled }}
             {{ partial "twitterfeed" (dict "ID" "twitterfeed" "Username" .Site.Data.integrations.twitter.username "Warning" .Site.Data.integrations.twitter.warning "Construction" .Site.Data.integrations.twitter.construction "BaseURL" .Site.BaseURL ) }}
           {{ else }}
             {{ partial "mastodonfeed" (dict "ID" "mastodonfeed" "Username" .Site.Data.integrations.mastodon.username "Construction" .Site.Data.integrations.mastodon.construction "BaseURL" .Site.BaseURL ) }}
