feat: Add support for media attachments on Bluesky to feed

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -122,7 +122,7 @@
             >
               <span>Recent Articles</span>
             </div>
-            <div class="pf-c-card__body twitterfeed">
+            <div class="pf-c-card__body">
               <ul class="pf-l-flex pf-m-column pf-m-space-items-sm">
                 {{ range .Pages }}
                   {{ if eq .Title "Articles" }}
