--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -82,7 +82,7 @@
         >
           <div class="pf-c-page__header__content--max-width">
             <a
-              class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-c-page__header-brand-link--no-decoration pf-c-avatar--hover pf-u-pl-2xl pf-u-pl-sm-on-xl"
+              class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-c-page__header-brand-link--no-decoration pf-u-pl-2xl pf-u-pl-sm-on-xl pf-x-u-hoverable-parent--rotate"
               href="{{ .Site.BaseURL }}"
             >
               <img
