--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -3,10 +3,16 @@
   id="{{ .ID }}"
 >
   <div class="pf-c-card__body pf-u-p-0 pf-u-display-flex">
-    <img
-      src="/img/octocat.svg"
-      class="pf-u-p-md pf-x-octocat pf-u-display-none pf-u-display-flex-on-md pf-u-px-md"
-    />
+    <a
+      class="lastcommit__user__url pf-x-u-hoverable pf-x-u-hoverable--rotate"
+      target="_blank"
+    >
+      <img
+        src="/img/octocat.svg"
+        class="pf-u-p-md pf-x-octocat pf-u-display-none pf-u-display-flex-on-md pf-u-px-md"
+      />
+    </a>
+
     <div class="lastcommit">
       <div class="pf-c-code-block pf-x-u-transparent pf-u-p-sm pf-u-pl-xs">
         <div class="pf-c-code-block__header">
@@ -20,7 +26,9 @@
               </a>
             </div>
 
-            <div class="pf-c-code-block__actions-item pf-u-pb-sm pf-u-pt-sm-on-lg pf-u-pr-md">
+            <div
+              class="pf-c-code-block__actions-item pf-u-pb-sm pf-u-pt-sm-on-lg pf-u-pr-md"
+            >
               <a class="lastcommit__repo__url" target="_blank">
                 <i class="fas fa-code-branch" aria-hidden="true"></i>
                 <span class="lastcommit__repo__name"></span> (<span
@@ -51,8 +59,9 @@ const lastCommit = await (
 ).json();
 
 // User
-document.querySelector("#{{ .ID }} .lastcommit__user__url").href =
-  lastCommit.userURL;
+document.querySelectorAll("#{{ .ID }} .lastcommit__user__url").forEach(el => {
+  el.href = lastCommit.userURL;
+});
 
 const img = document.querySelector("#{{ .ID }} #lastcommit__user__url__img");
 
