--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
   <main
-    class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur pf-x-u-transparent {{ if or .Site.Data.effects.fireworks .Site.Data.effects.snowfall .Site.Data.effects.rainfall }}
+    class="pf-c-page__main pf-c-page__main--with-overlay {{ if .Site.Data.effects.grid }}
+      pf-c-page__main--with-overlay--grid
+    {{ end }} pf-x-u-blur pf-x-u-transparent {{ if or .Site.Data.effects.fireworks .Site.Data.effects.snowfall .Site.Data.effects.rainfall }}
       pf-c-page__main--with-effects{{ if not .Site.Data.effects.blur }}
         pf-c-page__main--with-effects--without-blur
       {{ end }}
