--- a/layouts/partials/mastodonfeed.html
+++ b/layouts/partials/mastodonfeed.html
@@ -172,7 +172,7 @@
     reblogIcon.classList.add("fas", "fa-retweet")
 
     const reblogCount = document.createElement("span");
-    reblogCount.textContent = tweet.reblogCount;
+    reblogCount.textContent = tweet.reblogsCount;
 
     reblogs.append(reblogIcon)
     reblogs.append(reblogCount)
