--- a/layouts/partials/spotifystatus.html
+++ b/layouts/partials/spotifystatus.html
@@ -1,5 +1,6 @@
 <a
   id="{{ .ID }}"
+  target="_blank"
   class="pf-u-display-flex pf-u-align-items-center pf-c-page__header-brand-link--no-decoration pf-u-ml-lg pf-u-ml-0-on-xl pf-u-p-sm spotifystatus pf-x-u-text--freestanding"
 >
   <img
