--- a/layouts/index.html
+++ b/layouts/index.html
@@ -93,7 +93,7 @@
       </figure>
 
       <div
-        class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-mt-lg pf-u-mt-0-on-lg pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center"
+        class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-mt-lg pf-u-mt-0-on-lg pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center-on-md pf-x-u-overflow-x-auto"
       >
         <a
           href="{{ .Site.Data.links.cta.link }}"
