--- a/layouts/partials/spotifystatus.html
+++ b/layouts/partials/spotifystatus.html
@@ -1,7 +1,7 @@
 <a
   id="{{ .ID }}"
   target="_blank"
-  class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-c-page__header-brand-link--no-decoration pf-x-u-hoverable-parent pf-x-u-hoverable-parent--rotate spotifystatus pf-u-p-sm pf-u-ml-lg pf-u-ml-0-on-xl"
+  class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-c-page__header-brand-link--no-decoration pf-x-u-hoverable-parent spotifystatus pf-u-p-sm pf-u-ml-lg pf-u-ml-0-on-xl"
 >
   <img
     src="/img/spotify.svg"
