fix: Limit max amount of images shown on Bluesky and Mastodon feeds

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -652,3 +652,8 @@ a.pf-c-button.pf-m-primary,
     object-fit: cover;
   }
 }
+
+.twitterfeed .pf-l-gallery__item img {
+  aspect-ratio: 2;
+  object-fit: cover;
+}
