fix: Break CTAs on sizes smaller than xs

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -93,12 +93,12 @@
       </figure>
 
       <div
-        class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-mt-lg pf-u-mt-0-on-lg pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center-on-md pf-x-u-overflow-x-auto"
+        class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-mt-lg pf-u-mt-0-on-lg pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center-on-md pf-u-flex-direction-column pf-u-flex-direction-row-on-sm"
       >
         <a
           href="{{ .Site.Data.links.cta.link }}"
           target="_blank"
-          class="pf-c-button pf-m-primary pf-u-mr-md"
+          class="pf-c-button pf-m-primary pf-u-mb-md pf-u-mb-0-on-sm pf-u-mr-md-on-sm"
         >
           <span class="pf-c-button__icon pf-m-start">
             <i class="{{ .Site.Data.links.cta.icon }}" aria-hidden="true"></i>
