refactor: Allow HTML injection for description

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -70,7 +70,7 @@
         <p
           class="pf-x-u-text-shadow-sm pf-x-u-text--freestanding pf-x-u-text--center"
         >
-          {{ .Site.Data.person.description }}
+          {{ .Site.Data.person.description | safeHTML }}
         </p>
       </div>
 
