--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,7 +9,7 @@ $pf-global--BorderRadius--sm: 8px;
 @import "@patternfly/patternfly/patternfly-addons.scss";
 
 @import "@fontsource/lato/scss/mixins.scss";
-@include fontFace($weight: 400, $display: fallback, $fontDir: "fonts/lato");
+@include fontFace($weight: 400, $display: fallback, $fontDir: "./{{ .Site.BaseURL }}/assets/fonts/lato");
 
 $bg: "/img/bg.webp";
 
